fixed horizontal scroll and verticalscroll in mobile footer

--- a/style.css
+++ b/style.css
@@ -66,7 +66,6 @@
 
 .menu_seperator {
   height: 50px;
-  padding-left: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -83,7 +82,6 @@
   display: flex;
   align-items: center;
   gap: 36px;
-  padding-left: 64px;
 }
 
 .shop_introduction {
@@ -178,13 +176,14 @@
 }
 
 .mobile_footer {
-  width: 100%;
   height: 50px;
   background-color: #363534;
   position: fixed;
   bottom: 0;
   left: 0;
+  right: 0;
   display: none;
+  overflow: hidden;
 }
 
 #seperator_mobile {
@@ -199,6 +198,7 @@
 .mobile_btn {
   width: 30px;
   height: 30px;
+  display: block;
 
   background-size: contain;
   background-repeat: no-repeat;
@@ -243,7 +243,8 @@
 .mobile_menu {
   display: flex;
   justify-content: space-around;
-  margin: 10px;
+  width: 100%;
+  margin-top: 10px;
 }
 
 .plus_btn {
